Add css with variables.
I create css with variables, so it will be later easy apply theme changes. (light/dark theme) - in progress

--- a/index.html
+++ b/index.html
@@ -2,32 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./todo_logo.png">
   
-  <title>Frontend Mentor | Todo app</title>
+  <title>TODO app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+ 
 </head>
 <body>
-
-  Todo
-
-  <!-- Add dynamic number --> items left
-
-  All
-  Active 
-  Completed
-
-  Clear Completed
-
-  Drag and drop to reorder list
+<main>
 
 
+<div class="container">
+
+<div class="header">
+
+  <div>
+    <h1>Todo</h1>
+  </div>
+
+  <div class="themeIcon">
+    
+  </div>
+</div>
+ 
+
+  
+
+
+</div>
+</main>  
 </body>
 </html>
