Add toggle theme
Add basic javascript to toggle theme if on click happen on the button (moon/sun icon).

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <div>
     <h1>Todo</h1>
   </div>
-
+  <button  id="theme-switcher" class="themeBtn">
   <div class="themeIcon">
-    
+  </button>
   </div>
 </div>
  
@@ -33,5 +33,6 @@
 
 </div>
 </main>  
+<script src="script.js"></script>
 </body>
 </html>
