Add input field
Add input field with placeholder.
Next step is saving the input value in local storage.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
   <div class="themeIcon">
   </button>
   </div>
+
+  <label for="inputTodo"><!--CIRCLE--><div class="circle"></div></label>
+  <input type="text" id="inputTodo" name="inputTodo"
+  placeholder="Create a new todo..."
+  >
+ 
 </div>
  
 
