Add list elements
User can add list element (if he/she submit empty input alert happen, asking the user to fill the form.) List items saved in local storage and after page loaded render the list if is there one. - next step formating the list (css)

--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
   </button>
   </div>
 
+  <form>
   <label for="inputTodo"><!--CIRCLE--><div class="circle"></div></label>
   <input type="text" id="inputTodo" name="inputTodo"
   placeholder="Create a new todo..."
   >
- 
+</form>
+
+<ul id="todo-list"></ul>
+
 </div>
  
 
