--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
 
 <ul id="todo-list"></ul>
 
+<div class="footer-list">
+<div class="items-left">items left</div>
+
+<div class="filter">
+<div>All</div>
+<div>Active</div>
+<div>Completed</div>
+</div>
+
+<div class="clear">Clear Completed</div>
+
+</div>
 </div>
  
 
